--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div class="container">
 			<h1>Counter<h1>
-			<button class="controlButtons"></button>
-			<button class="controlButtons"></button>
-			<button class="controlButtons"></button>
+			<button class="container__controlButtons">decrease</button>
+			<button class="container__controlButtons">reset</button>
+			<button class="container__controlButtons">increase</button>
 		</div>
   </body>
 </html>
