counter logic done

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <body>
     <div class="container">
 			<h1>Counter<h1>
-			<button class="container__controlButtons">decrease</button>
-			<button class="container__controlButtons">reset</button>
-			<button class="container__controlButtons">increase</button>
+        <div class="container__number" id="number">0</div>
+			<button class="container__controlButtons" id="decrease">decrease</button>
+			<button class="container__controlButtons" id="reset">reset</button>
+			<button class="container__controlButtons" id="increase">increase</button>
 		</div>
   </body>
 </html>
